--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "eslint": "7.30.0",
     "eslint-plugin-ghost": "2.4.0",
     "lodash": "4.17.21",
-    "probe-image-size": "7.2.1",
-    "request-image-size": "2.2.0"
+    "probe-image-size": "7.2.1"
   }
 }
