--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint": "7.32.0",
     "eslint-plugin-ghost": "2.6.0",
     "lodash": "4.17.21",
-    "probe-image-size": "7.2.1"
+    "probe-image-size": "7.2.1",
+    "xml": "^1.0.1"
   }
 }
