--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "eslint": "7.32.0",
     "eslint-plugin-ghost": "2.6.0",
     "lodash": "4.17.21",
+    "node-fetch": "^2.6.1",
     "probe-image-size": "7.2.1",
-    "xml": "^1.0.1"
+    "xml": "^1.0.1",
+    "xml2js": "^0.4.23"
   }
 }
