fix: add en to English Ghost keys for clarity

--- a/sample.env
+++ b/sample.env
@@ -6,9 +6,9 @@ LOCAL_GHOST_API_URL=api_url_from_ghost_dashboard
 LOCAL_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 LOCAL_GHOST_API_VERSION=v3
 
-GHOST_API_URL=api_url_from_ghost_dashboard
-GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-GHOST_API_VERSION=v3
+EN_GHOST_API_URL=api_url_from_ghost_dashboard
+EN_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+EN_GHOST_API_VERSION=v3
 
 ES_GHOST_API_URL=api_url_from_ghost_dashboard
 ES_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
@@ -23,10 +23,10 @@ ZH_GHOST_API_VERSION=v2
 # ---------------------
 
 # Language to build
-CLIENT_LOCALE=en
+CLIENT_LOCALE=es
 
 # API to source from
-GHOST_API_SOURCE=local
+GHOST_API_SOURCE=es
 
 # URL for deployment
 SITE_URL=http://localhost:8080
