--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": ".eleventy.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "cross-env ELEVENTY_ENV=dev eleventy --serve",
-    "build": "cross-env ELEVENTY_ENV=prod eleventy",
+    "dev": "cross-env ELEVENTY_ENV=dev NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
+    "build": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
     "test": "npm run build",
     "lint": "eslint . --ext .js --cache"
   },
@@ -45,13 +45,13 @@
     "dayjs": "^1.10.4",
     "dotenv": "^10.0.0",
     "eslint-utils": "^3.0.0",
-    "html-minifier": "^4.0.0",
     "i18next": "^20.2.2",
     "i18next-fs-backend": "^1.1.1",
     "terser": "^5.7.0"
   },
   "devDependencies": {
     "@mightyplow/eleventy-plugin-cache-buster": "1.1.3",
+    "@minify-html/js": "^0.6.8",
     "eslint": "7.32.0",
     "eslint-plugin-ghost": "2.6.0",
     "lodash": "4.17.21",
