fix: cleanup and refactor (#16)
* feat: add version key to ghost api setup, allow nullish coalescing in eslint

* fix: doc meta info

* fix: simplify html minification, disable cache buster plugin, and set up excerpts earlier in build

* fix: simplify logo and cover image handling

* fix: replace chunkArray with lodash's chunk

* fix: add handling for all API keys in .env files, simplify handling of locale a bit

* fix: set site language using env vars, remove site lang handler helper function

* fix: remove call to settings from .eleventy, pass site object to JSONLD shortcode

* fix: remove getReadingTime filter

* fix: simplify site global data and dayjs timezone handling

* fix: simplify ghost API key setting

* fix: client time-ago selector

* fix: increase specificity with eslint ignore comments wherever possible

* fix: add en to English Ghost keys for clarity

* feat: get Ghost API keys dynamically

* fix: bump number of published Chinese articles in search bar

* fix: use meta translation file for rss title and description fields

* fix: conditional handling for zh-cn / zh locales

* fix: initial scale int to float

* fix: swap out html minification packages, increase node memory limit

* fix: pass title to title to image dimention module for error reporting

* fix: refactor pagination and move dynamic pagination link, remove unnecessary HTML comments

* fix: remove optional nunjucks dashes, spacing

* fix: add missing json ld description

* fix: remove conditional for setting logo image

* fix: clarify comments

--- a/sample.env
+++ b/sample.env
@@ -2,19 +2,40 @@
 # Ghost API
 # ---------------------
 
-GHOST_API_URL=api_url_from_ghost_dashboard
-GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-SITE_URL=http://localhost:8080
+LOCAL_GHOST_API_URL=api_url_from_ghost_dashboard
+LOCAL_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+LOCAL_GHOST_API_VERSION=v3
 
-EN_GHOST_API_URL=api_url_from_en_ghost_dashboard
-EN_GHOST_CONTENT_API_KEY=api_key_from_en_ghost_dashboard
+EN_GHOST_API_URL=api_url_from_ghost_dashboard
+EN_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+EN_GHOST_API_VERSION=v3
+
+ES_GHOST_API_URL=api_url_from_ghost_dashboard
+ES_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+ES_GHOST_API_VERSION=v3
+
+ZH_GHOST_API_URL=api_url_from_ghost_dashboard
+ZH_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+ZH_GHOST_API_VERSION=v2
+
+# ---------------------
+# Build variants
+# ---------------------
+
+# Language to build
+CLIENT_LOCALE=es
+
+# API to source from
+GHOST_API_SOURCE=es
+
+# URL for deployment
+SITE_URL=http://localhost:8080
 
 # ---------------------
 # Search
 # ---------------------
 
 # Client search bar, search results page
-
 ALGOLIA_APP_ID=app_id_from_algolia_dashboard
 ALGOLIA_API_KEY=api_key_from_algolia_dashboard
 
@@ -24,5 +45,4 @@ ALGOLIA_API_KEY=api_key_from_algolia_dashboard
 
 # This number and the one for `size` in the 
 # front matter of `src/index.njk` must match
-
 POSTS_PER_PAGE=25
