fix: update locale code handling and sample.env

--- a/sample.env
+++ b/sample.env
@@ -23,10 +23,10 @@ ZH_GHOST_API_VERSION=v2
 # ---------------------
 
 # Language to build
-CLIENT_LOCALE=es
+CLIENT_LOCALE=english
 
 # API to source from
-GHOST_API_SOURCE=es
+GHOST_API_SOURCE=local
 
 # URL for deployment
 SITE_URL=http://localhost:8080
