feat: add pt br and it locales, other fixes (#33)
* feat: add pt translations

* feat: add it translations

* fix: update locale code handling and sample.env

* fix: rename i18n/locale directories, simplify locale code usage, load day js locale dynamically

* fix: algolia index setup

* fix: chinese term for translator

* feat: add portuguese and italian to translations.json

* fix: rework ghost API initialization, fix author / translator section for post card

* fix: update sample.env to new format

* fix: simplify byline read more localization

* fix: footer donation link in locale files

* fix: dynamic dayjs init for client

* fix: remove link from byline read more translations

* fix: remove full stop handler

--- a/sample.env
+++ b/sample.env
@@ -6,29 +6,37 @@ LOCAL_GHOST_API_URL=api_url_from_ghost_dashboard
 LOCAL_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 LOCAL_GHOST_API_VERSION=v3
 
-EN_GHOST_API_URL=api_url_from_ghost_dashboard
-EN_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-EN_GHOST_API_VERSION=v3
+ENGLISH_GHOST_API_URL=api_url_from_ghost_dashboard
+ENGLISH_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+ENGLISH_GHOST_API_VERSION=v3
 
-ES_GHOST_API_URL=api_url_from_ghost_dashboard
-ES_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-ES_GHOST_API_VERSION=v3
+ESPANOL_GHOST_API_URL=api_url_from_ghost_dashboard
+ESPANOL_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+ESPANOL_GHOST_API_VERSION=v3
 
-ZH_GHOST_API_URL=api_url_from_ghost_dashboard
-ZH_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-ZH_GHOST_API_VERSION=v2
+CHINESE_GHOST_API_URL=api_url_from_ghost_dashboard
+CHINESE_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+CHINESE_GHOST_API_VERSION=v2
+
+PORTUGUESE_GHOST_API_URL=api_url_from_ghost_dashboard
+PORTUGUESE_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+PORTUGUESE_GHOST_API_VERSION=v3
+
+ITALIAN_GHOST_API_URL=api_url_from_ghost_dashboard
+ITALIAN_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+ITALIAN_GHOST_API_VERSION=v3
 
 # ---------------------
 # Build variants
 # ---------------------
 
 # Language to build
-CLIENT_LOCALE=es
+CLIENT_LOCALE=english
 
 # API to source from
-GHOST_API_SOURCE=es
+GHOST_SOURCE_API=local
 
-# URL for deployment
+# URL for final build
 SITE_URL=http://localhost:8080
 
 # ---------------------
