feat: add handling for different site paths

--- a/sample.env
+++ b/sample.env
@@ -36,8 +36,8 @@ CLIENT_LOCALE=english
 # API to source from
 GHOST_SOURCE_API=local
 
-# URL for final build
-SITE_URL=http://localhost:8080
+# URL for final build with no trailing slash
+SITE_URL=http://localhost:8080/news
 
 # ---------------------
 # Search
@@ -51,6 +51,6 @@ ALGOLIA_API_KEY=api_key_from_algolia_dashboard
 # Pagination
 # ---------------------
 
-# This number and the one for `size` in the 
+# This number and the one for `size` in the
 # front matter of `src/index.njk` must match
 POSTS_PER_PAGE=25
