feat: enable goodle ads on news

--- a/sample.env
+++ b/sample.env
@@ -30,9 +30,16 @@ ITALIAN_GHOST_API_VERSION=v3
 # Search
 # ---------------------
 
-# Client search bar, search results page
 ALGOLIA_APP_ID=app_id_from_algolia_dashboard
 ALGOLIA_API_KEY=api_key_from_algolia_dashboard
+
+# ---------------------
+# Monetization
+# ---------------------
+
+ADS_ENABLED=false
+GOOGLE_ADSENSE_DATA_AD_CLIENT=pub-1234567890
+GOOGLE_ADSENSE_DATA_AD_SLOT=1234567890
 
 # ---------------------
 # Pagination
@@ -45,6 +52,7 @@ POSTS_PER_PAGE=25
 # ---------------------
 # Build variants
 # ---------------------
+
 # SITE_DOMAIN=freecodecamp.org
 SITE_DOMAIN=localhost:8080
 LOCALE_FOR_UI=italian
