feat: source local json files for ci tests, break up ghost fetching and processing

--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   },
   "scripts": {
     "start": "npm run develop",
+    "start:ci:english": "cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=english LOCALE_FOR_GHOST=english npm run develop",
+    "start:ci:chinese": "cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=chinese LOCALE_FOR_GHOST=chinese npm run develop",
+    "start:ci:espanol": "cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=espanol LOCALE_FOR_GHOST=espanol npm run develop",
     "clean": "npm-run-all -p clean:*",
     "clean:error-logs": "shx rm -f *-errors.log",
     "clean:dist": "shx rm -rf dist/",
+    "cypress:run:english": "npm run cypress -- run --spec 'cypress/integration/english/**/*'",
+    "cypress:run:chinese": "npm run cypress -- run --spec 'cypress/integration/chinese/**/*'",
+    "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/integration/espanol/**/*'",
+    "cypress:watch": "npm run cypress -- open",
     "dev"  : "npm run develop",
     "predevelop": "npm run clean",
     "develop": "cross-env ELEVENTY_ENV=dev  NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
