feat: basic cypress setup

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "clean": "npm-run-all -p clean:*",
     "clean:error-logs": "shx rm -f *-errors.log",
     "clean:dist": "shx rm -rf dist/",
+    "cypress": "cypress",
+    "cypress:run": "npm run cypress -- run",
+    "cypress:watch": "npm run cypress -- open",
+    "cypress:install-build-tools": "sh ./cypress-install.sh",
     "dev": "npm run clean && cross-env ELEVENTY_ENV=dev  NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
     "build": "npm run clean && cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
     "test": "npm run build",
@@ -50,6 +54,7 @@
     "@tryghost/helpers": "1.1.54",
     "clean-css": "5.2.2",
     "cross-env": "7.0.3",
+    "cypress": "9.0.0",
     "dayjs": "1.10.7",
     "dotenv": "10.0.0",
     "eslint": "8.3.0",
