--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,10 @@
   "labels": ["renovate"],
   "extends": ["config:base"],
   "branchConcurrentLimit": 20,
+  "dependencyDashboard": true,
+  "major": {
+    "dependencyDashboardApproval": true
+  },
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
