--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,11 @@ name: Azure Static Web Apps CI/CD
 on:
   push:
     branches:
-      - main
+      - prod-staging
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - main
+      - prod-staging
 
 jobs:
   build_and_deploy_job:
