--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "npm": ">=8"
   },
   "scripts": {
-    "clean": "npm run clean:error-logs && npm run clean:dist",
-    "clean:error-logs": "rm -f *-errors.log",
-    "clean:dist": "rm -rf dist/",
     "start": "npm run dev",
-    "dev": "npm run clean && cross-env ELEVENTY_ENV=dev NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
+    "clean": "npm-run-all -p clean:*",
+    "clean:error-logs": "shx rm -f *-errors.log",
+    "clean:dist": "shx rm -rf dist/",
+    "dev"  : "npm run clean && cross-env ELEVENTY_ENV=dev  NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
     "build": "npm run clean && cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
     "test": "npm run build",
     "lint": "eslint . --ext .js --cache"
@@ -60,8 +60,10 @@
     "lodash": "4.17.21",
     "md5": "2.3.0",
     "node-fetch": "2.6.6",
+    "npm-run-all": "4.1.5",
     "probe-image-size": "7.2.2",
     "sanitize-html": "2.5.3",
+    "shx": "0.3.3",
     "terser": "5.10.0",
     "xml2js": "0.4.23"
   }
