fix: refactor and unify configs

--- a/sample.env
+++ b/sample.env
@@ -27,19 +27,6 @@ ITALIAN_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 ITALIAN_GHOST_API_VERSION=v3
 
 # ---------------------
-# Build variants
-# ---------------------
-
-# Language to build
-CLIENT_LOCALE=english
-
-# API to source from
-GHOST_SOURCE_API=local
-
-# URL for final build with no trailing slash
-SITE_URL=http://localhost:8080/news
-
-# ---------------------
 # Search
 # ---------------------
 
@@ -54,3 +41,11 @@ ALGOLIA_API_KEY=api_key_from_algolia_dashboard
 # This number and the one for `size` in the
 # front matter of `src/index.njk` must match
 POSTS_PER_PAGE=25
+
+# ---------------------
+# Build variants
+# ---------------------
+# SITE_DOMAIN=freecodecamp.org
+SITE_DOMAIN=localhost:8080
+LOCALE_FOR_UI=italian
+LOCALE_FOR_GHOST=italian
