--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Deploy to Azure Static Web Apps
 
 on:
@@ -29,7 +26,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        # cache: 'npm'
+        cache: 'npm'
 
     - name: Install dependencies
       run: npm ci
@@ -39,4 +36,36 @@ jobs:
       env:
         NODE_ENV: production
         BUILD_LANG: ${{ matrix.languages }}
+
+        LOCAL_GHOST_API_URL: ${{ secrets.LOCAL_GHOST_API_URL }}
+        LOCAL_GHOST_API_VERSION: ${{ secrets.LOCAL_GHOST_API_VERSION }}
+        LOCAL_GHOST_CONTENT_API_KEY: ${{ secrets.LOCAL_GHOST_CONTENT_API_KEY }}
+        
+        ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
+        ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
+        
+        CHINESE_GHOST_API_URL: ${{ secrets.CHINESE_GHOST_API_URL }}
+        CHINESE_GHOST_API_VERSION: ${{ secrets.CHINESE_GHOST_API_VERSION }}
+        CHINESE_GHOST_CONTENT_API_KEY: ${{ secrets.CHINESE_GHOST_CONTENT_API_KEY }}
+        
+        ENGLISH_GHOST_API_URL: ${{ secrets.ENGLISH_GHOST_API_URL }}
+        ENGLISH_GHOST_API_VERSION: ${{ secrets.ENGLISH_GHOST_API_VERSION }}
+        ENGLISH_GHOST_CONTENT_API_KEY: ${{ secrets.ENGLISH_GHOST_CONTENT_API_KEY }}
+        
+        ESPANOL_GHOST_API_URL: ${{ secrets.ESPANOL_GHOST_API_URL }}
+        ESPANOL_GHOST_API_VERSION: ${{ secrets.ESPANOL_GHOST_API_VERSION }}
+        ESPANOL_GHOST_CONTENT_API_KEY: ${{ secrets.ESPANOL_GHOST_CONTENT_API_KEY }}
+        
+        ITALIAN_GHOST_API_URL: ${{ secrets.ITALIAN_GHOST_API_URL }}
+        ITALIAN_GHOST_API_VERSION: ${{ secrets.ITALIAN_GHOST_API_VERSION }}
+        ITALIAN_GHOST_CONTENT_API_KEY: ${{ secrets.ITALIAN_GHOST_CONTENT_API_KEY }}
+        
+        PORTUGUESE_GHOST_API_URL: ${{ secrets.PORTUGUESE_GHOST_API_URL }}
+        PORTUGUESE_GHOST_API_VERSION: ${{ secrets.PORTUGUESE_GHOST_API_VERSION }}
+        PORTUGUESE_GHOST_CONTENT_API_KEY: ${{ secrets.PORTUGUESE_GHOST_CONTENT_API_KEY }}
+
+        POSTS_PER_PAGE: ${{ secrets.POSTS_PER_PAGE }}
+        SITE_DOMAIN: freecodecamp.org
+        LOCALE_FOR_UI: ${{ matrix.languages }}
+        LOCALE_FOR_GHOST: ${{ matrix.languages }}
 
