--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,71 +1,102 @@
-name: Deploy to Azure Static Web Apps
+name: Build and Deploy to Azure
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - actions-*
-      - prod-*
+    inputs:
+      site_domain:
+        default: "freecodecamp.dev"
+        required: true
+  # push:
+  #   branches:
+  #     - actions-*
+  #     - prod-*
 
 jobs:
   build:
-
+    name: Build
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         node-version: [16.x]
         # languages: [english, italian, chinese, portuguese, espanol]
         languages: [italian]
+    
+    env:
+      BUILD_LANG: ${{ matrix.languages }}
+
+      LOCAL_GHOST_API_URL: ${{ secrets.LOCAL_GHOST_API_URL }}
+      LOCAL_GHOST_API_VERSION: ${{ secrets.LOCAL_GHOST_API_VERSION }}
+      LOCAL_GHOST_CONTENT_API_KEY:
+        ${{ secrets.LOCAL_GHOST_CONTENT_API_KEY }}
+
+      ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
+      ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
+
+      CHINESE_GHOST_API_URL: ${{ secrets.CHINESE_GHOST_API_URL }}
+      CHINESE_GHOST_API_VERSION: ${{ secrets.CHINESE_GHOST_API_VERSION }}
+      CHINESE_GHOST_CONTENT_API_KEY:
+        ${{ secrets.CHINESE_GHOST_CONTENT_API_KEY }}
+
+      ENGLISH_GHOST_API_URL: ${{ secrets.ENGLISH_GHOST_API_URL }}
+      ENGLISH_GHOST_API_VERSION: ${{ secrets.ENGLISH_GHOST_API_VERSION }}
+      ENGLISH_GHOST_CONTENT_API_KEY:
+        ${{ secrets.ENGLISH_GHOST_CONTENT_API_KEY }}
+
+      ESPANOL_GHOST_API_URL: ${{ secrets.ESPANOL_GHOST_API_URL }}
+      ESPANOL_GHOST_API_VERSION: ${{ secrets.ESPANOL_GHOST_API_VERSION }}
+      ESPANOL_GHOST_CONTENT_API_KEY:
+        ${{ secrets.ESPANOL_GHOST_CONTENT_API_KEY }}
+
+      ITALIAN_GHOST_API_URL: ${{ secrets.ITALIAN_GHOST_API_URL }}
+      ITALIAN_GHOST_API_VERSION: ${{ secrets.ITALIAN_GHOST_API_VERSION }}
+      ITALIAN_GHOST_CONTENT_API_KEY:
+        ${{ secrets.ITALIAN_GHOST_CONTENT_API_KEY }}
+
+      PORTUGUESE_GHOST_API_URL: ${{ secrets.PORTUGUESE_GHOST_API_URL }}
+      PORTUGUESE_GHOST_API_VERSION:
+        ${{ secrets.PORTUGUESE_GHOST_API_VERSION }}
+      PORTUGUESE_GHOST_CONTENT_API_KEY:
+        ${{ secrets.PORTUGUESE_GHOST_CONTENT_API_KEY }}
+
+      POSTS_PER_PAGE: ${{ secrets.POSTS_PER_PAGE }}
+
+      SITE_DOMAIN: ${{ github.event.inputs.site_domain }}
+
+      LOCALE_FOR_UI: ${{ matrix.languages }}
+      LOCALE_FOR_GHOST: ${{ matrix.languages }}
 
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v2
+      - name: Checkout source code
+        uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build the source code
-      run: npm run build
-      env:
-        NODE_ENV: production
-        BUILD_LANG: ${{ matrix.languages }}
+      - name: Install dependencies
+        run: npm ci
 
-        LOCAL_GHOST_API_URL: ${{ secrets.LOCAL_GHOST_API_URL }}
-        LOCAL_GHOST_API_VERSION: ${{ secrets.LOCAL_GHOST_API_VERSION }}
-        LOCAL_GHOST_CONTENT_API_KEY: ${{ secrets.LOCAL_GHOST_CONTENT_API_KEY }}
-        
-        ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
-        ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
-        
-        CHINESE_GHOST_API_URL: ${{ secrets.CHINESE_GHOST_API_URL }}
-        CHINESE_GHOST_API_VERSION: ${{ secrets.CHINESE_GHOST_API_VERSION }}
-        CHINESE_GHOST_CONTENT_API_KEY: ${{ secrets.CHINESE_GHOST_CONTENT_API_KEY }}
-        
-        ENGLISH_GHOST_API_URL: ${{ secrets.ENGLISH_GHOST_API_URL }}
-        ENGLISH_GHOST_API_VERSION: ${{ secrets.ENGLISH_GHOST_API_VERSION }}
-        ENGLISH_GHOST_CONTENT_API_KEY: ${{ secrets.ENGLISH_GHOST_CONTENT_API_KEY }}
-        
-        ESPANOL_GHOST_API_URL: ${{ secrets.ESPANOL_GHOST_API_URL }}
-        ESPANOL_GHOST_API_VERSION: ${{ secrets.ESPANOL_GHOST_API_VERSION }}
-        ESPANOL_GHOST_CONTENT_API_KEY: ${{ secrets.ESPANOL_GHOST_CONTENT_API_KEY }}
-        
-        ITALIAN_GHOST_API_URL: ${{ secrets.ITALIAN_GHOST_API_URL }}
-        ITALIAN_GHOST_API_VERSION: ${{ secrets.ITALIAN_GHOST_API_VERSION }}
-        ITALIAN_GHOST_CONTENT_API_KEY: ${{ secrets.ITALIAN_GHOST_CONTENT_API_KEY }}
-        
-        PORTUGUESE_GHOST_API_URL: ${{ secrets.PORTUGUESE_GHOST_API_URL }}
-        PORTUGUESE_GHOST_API_VERSION: ${{ secrets.PORTUGUESE_GHOST_API_VERSION }}
-        PORTUGUESE_GHOST_CONTENT_API_KEY: ${{ secrets.PORTUGUESE_GHOST_CONTENT_API_KEY }}
+      - name: Build site
+        run: npm run build
+        env:
+          NODE_ENV: production
+      
+      - name: Docker login to Azure Container Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.ACR_NAME }}.azurecr.io
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
-        POSTS_PER_PAGE: ${{ secrets.POSTS_PER_PAGE }}
-        SITE_DOMAIN: freecodecamp.org
-        LOCALE_FOR_UI: ${{ matrix.languages }}
-        LOCALE_FOR_GHOST: ${{ matrix.languages }}
-
+      - name: Build & Push Docker Images
+        run: |
+          docker build . \
+          --tag ${{ secrets.ACR_NAME }}.azurecr.io/freecodecamp/news-${{ matrix.languages }}:${{ github.sha }} \
+          --tag ${{ secrets.ACR_NAME }}.azurecr.io/freecodecamp/news-${{ matrix.languages }}:latest \
+          --build-arg BUILD_LANGUAGE=${{ matrix.languages }} \
+          --file docker-config/Dockerfile
+          docker push --all-tags ${{ secrets.ACR_NAME }}.azurecr.io/freecodecamp/news-${{ matrix.languages }}
