--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "scripts": {
     "start": "npm run dev",
     "start-ci": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=english eleventy --serve",
+    "start-ci:chinese": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=chinese eleventy --serve",
+    "start-ci:espanol": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=espanol eleventy --serve",
     "clean": "npm-run-all -p clean:*",
     "clean:error-logs": "shx rm -f *-errors.log",
     "clean:dist": "shx rm -rf dist/",
     "cypress": "cypress",
-    "cypress:run": "npm run cypress -- run",
+    "cypress:run": "npm run cypress -- run --spec 'cypress/integration/english/**/*'",
+    "cypress:run:chinese": "npm run cypress -- run --spec 'cypress/integration/chinese/**/*'",
+    "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/integration/espanol/**/*'",
     "cypress:watch": "npm run cypress -- open",
     "cypress:install-build-tools": "sh ./cypress-install.sh",
     "dev": "npm run clean && cross-env ELEVENTY_ENV=dev  NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
