--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "scripts": {
     "start": "npm run dev",
-    "start-ci": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=english eleventy --serve",
-    "start-ci:chinese": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=chinese eleventy --serve",
-    "start-ci:espanol": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=espanol eleventy --serve",
+    "start:ci": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=english eleventy --serve",
+    "start:ci:chinese": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=chinese eleventy --serve",
+    "start:ci:espanol": "npm run clean && cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=espanol eleventy --serve",
     "clean": "npm-run-all -p clean:*",
     "clean:error-logs": "shx rm -f *-errors.log",
     "clean:dist": "shx rm -rf dist/",
