--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "dayjs": "1.10.7",
     "dotenv": "10.0.0",
     "eslint": "8.5.0",
+    "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-ghost": "2.11.0",
     "eslint-utils": "3.0.0",
     "i18next": "21.6.3",
