--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
   },
   "scripts": {
     "start": "npm run develop",
-    "start:ci:english": "cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=english LOCALE_FOR_GHOST=english npm run develop",
-    "start:ci:chinese": "cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=chinese LOCALE_FOR_GHOST=chinese npm run develop",
-    "start:ci:espanol": "cross-env ELEVENTY_ENV=ci LOCALE_FOR_UI=espanol LOCALE_FOR_GHOST=espanol npm run develop",
+    "start:ci:english": "LOCALE_FOR_UI=english LOCALE_FOR_GHOST=english npm run develop:ci",
+    "start:ci:chinese": "LOCALE_FOR_UI=chinese LOCALE_FOR_GHOST=chinese npm run develop:ci",
+    "start:ci:espanol": "LOCALE_FOR_UI=espanol LOCALE_FOR_GHOST=espanol npm run develop:ci",
     "clean": "npm-run-all -p clean:*",
     "clean:error-logs": "shx rm -f *-errors.log",
     "clean:dist": "shx rm -rf dist/",
+    "cypress": "cypress",
     "cypress:run:english": "npm run cypress -- run --spec 'cypress/integration/english/**/*'",
     "cypress:run:chinese": "npm run cypress -- run --spec 'cypress/integration/chinese/**/*'",
     "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/integration/espanol/**/*'",
     "cypress:watch": "npm run cypress -- open",
     "dev": "npm run develop",
     "predevelop": "npm run clean",
-    "develop": "cross-env ELEVENTY_ENV=dev  NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
+    "develop": "cross-env ELEVENTY_ENV=dev NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
+    "predevelop:ci": "npm run clean",
+    "develop:ci": "cross-env ELEVENTY_ENV=ci NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
     "prebuild": "npm run clean",
     "build": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
     "test": "npm run build",
