--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,10 +2,6 @@ name: Build and Deploy to Azure
 
 on:
   workflow_dispatch:
-    inputs:
-      site_domain:
-        default: "freecodecamp.dev"
-        required: true
   # push:
   #   branches:
   #     - actions-*
@@ -22,6 +18,7 @@ jobs:
         node-version: [16.x]
         # languages: [english, chinese, espanol, italian, portuguese, japanese, arabic, ukrainian]
         languages: [espanol, italian, portuguese]
+        site_tlds: [dev, org]
     
     env:
       BUILD_LANG: ${{ matrix.languages }}
@@ -66,7 +63,7 @@ jobs:
 
       POSTS_PER_PAGE: ${{ secrets.POSTS_PER_PAGE }}
 
-      SITE_DOMAIN: ${{ github.event.inputs.site_domain }}
+      SITE_DOMAIN: freecodecamp.${{ matrix.site_tlds }}
 
       LOCALE_FOR_UI: ${{ matrix.languages }}
       LOCALE_FOR_GHOST: ${{ matrix.languages }}
@@ -99,8 +96,8 @@ jobs:
       - name: Build & Push Docker Images
         run: |
           docker build . \
-          --tag ${{ secrets.ACR_NAME }}.azurecr.io/freecodecamp/news-${{ matrix.languages }}:${{ github.sha }} \
-          --tag ${{ secrets.ACR_NAME }}.azurecr.io/freecodecamp/news-${{ matrix.languages }}:latest \
+          --tag ${{ secrets.ACR_NAME }}.azurecr.io/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:${{ github.sha }} \
+          --tag ${{ secrets.ACR_NAME }}.azurecr.io/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:latest \
           --build-arg BUILD_LANGUAGE=${{ matrix.languages }} \
           --file docker-config/Dockerfile
-          docker push --all-tags ${{ secrets.ACR_NAME }}.azurecr.io/freecodecamp/news-${{ matrix.languages }}
+          docker push --all-tags ${{ secrets.ACR_NAME }}.azurecr.io/${{ matrix.site_tlds }}/news-${{ matrix.languages }}
