--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     strategy:
       fail-fast: false
@@ -19,7 +19,7 @@ jobs:
         # languages: [english, chinese, espanol, italian, portuguese, japanese, arabic, ukrainian]
         languages: [espanol, italian, portuguese]
         site_tlds: [dev, org]
-    
+
     env:
       BUILD_LANG: ${{ matrix.languages }}
 
@@ -76,7 +76,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          # cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
@@ -85,7 +85,7 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -105,13 +105,13 @@ jobs:
           --file docker-config/Dockerfile
           docker push --all-tags ${{ secrets.ACR_NAME }}.azurecr.io/${{ matrix.site_tlds }}/news-${{ matrix.languages }}
 
-  
+
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
     needs:
       - build
-    
+
     strategy:
       fail-fast: false
       matrix:
