--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,8 +86,8 @@ jobs:
         env:
           NODE_ENV: production
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
 
       - name: Docker login to Azure Container Registry
         uses: azure/docker-login@v1
