feat: enable builds for english

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [16.x]
-        # languages: [english, chinese, espanol, italian, portuguese, japanese, arabic, ukrainian]
-        languages: [chinese, espanol, italian, portuguese]
+        # languages-pending: [japanese, arabic, ukrainian]
+        languages: [english, chinese, espanol, italian, portuguese]
         site_tlds: [dev, org]
 
     env:
