--- a/.github/workflows/debug-self-hosted.yml
+++ b/.github/workflows/debug-self-hosted.yml
@@ -2,14 +2,14 @@ name: Self-Hosted (Debug)
 
 on:
   workflow_dispatch:
+  # schedule a build every 90 minutes, the runners will scale down every 2 hours (check infra config).
   schedule:
-    # schedule a build every 90 minutes, the runners will scale down every 2 hours (check infra config).
-    - '00 0-21/3 * * *'
-    - '30 1-22/3 * * *'
+    - cron: '00 0-21/3 * * *'
+    - cron: '30 1-22/3 * * *'
 
 jobs:
   debug_job_1:
-    name: Debug
+    name: Debug Job 1
     runs-on: self-hosted
 
     strategy:
@@ -38,7 +38,7 @@ jobs:
           echo "Language: ${{ matrix.languages }}"
 
   debug_job_2:
-    name: Debug
+    name: Debug Job 2
     runs-on: self-hosted
     needs: [debug_job_1]
 
