fix(deployments): remove lables from runners

--- a/.github/workflows/deploy-eng.yml
+++ b/.github/workflows/deploy-eng.yml
@@ -86,7 +86,7 @@ jobs:
 
   deploy:
     name: Deploy
-    runs-on: [self-hosted, on-aws, english]
+    runs-on: [self-hosted,on-aws]
     needs:
       - build
 
